# kernel-sidecar-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  lint.yaml  publish.yaml  test.yaml
src/: actions.rs  client.rs  handlers.rs  kernels.rs  lib.rs  main.rs  nb_builder.rs  notebook.rs  utils.rs
src/handlers/: debug.rs  mod.rs  msg_count.rs  outputs.rs
src/jupyter/: connection_file.rs  header.rs  message.rs  metadata.rs  mod.rs  request.rs  response.rs  wire_protocol.rs
src/jupyter/iopub_content/: clear_output.rs  display_data.rs  errors.rs  execute_result.rs  mod.rs  stream.rs
src/jupyter/message_content/: execute.rs  kernel_info.rs
src/jupyter/messages/: execute.rs  kernel_info.rs  mod.rs  status.rs
tests/: demo_notebook.ipynb  test_commands.rs  test_evcxr.rs  test_ipython.rs  test_kernels.rs  test_messages.rs  test_notebook.rs  test_outputs.rs  test_utils.rs
