[package]
name = "kernel-sidecar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
ring = "0.17.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
zeromq = "0.3.4"

[features]
# Feature flags for starting different types of Kernels in the test suite
test_evcxr = []
test_irkernel = []
test_deno = []
